--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -51,13 +51,9 @@
 
 \seq_new:N  \subfiglist_spec_str_seq
 \seq_new:N  \subfiglist_identifier_nums_seq
-\seq_new:N  \subfiglist_identifier_nums_sorted_seq
 \seq_new:N  \subfiglist_canvas_nums_seq
-\seq_new:N  \subfiglist_canvas_nums_sorted_seq
 \seq_new:N  \subfiglist_label_nums_seq
-\seq_new:N  \subfiglist_label_nums_sorted_seq
 \seq_new:N  \subfiglist_overlay_nums_seq
-\seq_new:N  \subfiglist_overlay_nums_sorted_seq
 \seq_new:N  \subfiglist_tmp_seq
 
 \prop_new:N \subfiglist_canvas_prop
@@ -1999,212 +1995,223 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Check if image numbers given in subfiglist specification are valid
-\cs_new:Npn \subfiglist_verify_identifier_nums:NNN #1 #2 #3
+\cs_new:Npn \subfiglist_verify_identifier_nums:NN #1 #2
 %
 % #1: Variable containing identifier numbers
-% #2: Variable to store sorted identifier numbers
-% #3: Variable to store total number of identifiers
+% #2: Variable to store total number of identifiers
 %
 {
-  % Sort detected image numbers
-  \seq_set_eq:NN #2 #1
-  \seq_sort:Nn #2
-  {
-    \int_compare:nTF { ##1 > ##2 }
-      { \sort_reversed: }
-      { \sort_ordered: }
-  }
-  
-  % Check if some image number is missing
-  \int_zero:N \subfiglist_tmp_int
-  \seq_map_inline:Nn #2
-  {
-    \int_incr:N \subfiglist_tmp_int
+  \group_begin:
+    \seq_clear_new:N \subfiglist_identifier_nums_sorted_seq
     
-    \int_compare:nF { ##1 = \subfiglist_tmp_int }
+    % Sort detected image numbers
+    \seq_set_eq:NN \subfiglist_identifier_nums_sorted_seq #1
+    \seq_sort:Nn \subfiglist_identifier_nums_sorted_seq
     {
-      \int_compare:nTF { ##1 > \subfiglist_tmp_int }
-      {
-        \msg_error:nnV { subfiglist } { missing~identifier } \subfiglist_tmp_int
-        \seq_map_break:
-      }{
-        \msg_error:nnn { subfiglist } { double~identifier } { ##1 }
-        \seq_map_break:
-      }
-    }
-  }
-  
-  % Save total number of images
-  \int_set_eq:NN #3 \subfiglist_tmp_int
-  
-  % Check if image numbers in subfiglist specification
-  % are in ascending order and warn if otherwise
-  \int_zero:N \subfiglist_tmp_int
-  \seq_map_inline:Nn #1
-  {
-    \int_incr:N \subfiglist_tmp_int
-    
-    \int_compare:nF { ##1 = \subfiglist_tmp_int }
-    {
-      \msg_warning:nn { subfiglist } { wrong~identifier~order }
-      \seq_map_break:
-    }
-  }
-}
-
-% Check if image numbers given in subfiglist body are valid
-\cs_new:Npn \subfiglist_verify_canvas_nums:NNNn #1 #2 #3 #4
-%
-% #1: Variable containing identifier numbers
-% #2: Variable containing canvas numbers
-% #3: Variable to store sorted canvas numbers
-% #4: Total number of identifiers
-%
-{
-  % Sort detected image numbers
-  \seq_set_eq:NN #3 #2
-  \seq_sort:Nn #3
-  {
-    \int_compare:nTF { ##1 > ##2 }
-      { \sort_reversed: }
-      { \sort_ordered: }
-  }
-  
-  % Check if some image number is missing
-  \int_zero:N \subfiglist_tmp_int
-  \seq_map_inline:Nn #3
-  {
-    \int_incr:N \subfiglist_tmp_int
-    
-    \int_compare:nF { ##1 = \subfiglist_tmp_int }
-    {
-      \int_compare:nTF { ##1 > \subfiglist_tmp_int }
-      {
-        \msg_error:nnV { subfiglist } { missing~canvas } \subfiglist_tmp_int
-        \seq_map_break:
-      }{
-        \msg_error:nnn { subfiglist } { double~canvas } { ##1 }
-        \seq_map_break:
-      }
-    }
-  }
-  
-  % Is number of identifiers equal to number of canvases?
-  \int_compare:nF { \subfiglist_tmp_int = #4 }
-  {
-    \int_compare:nTF { \subfiglist_tmp_int > #4 }
-    {
-      \msg_error:nnVn { subfiglist } { too~many~canvases } \subfiglist_tmp_int { #4 }
-    }{
-      \msg_error:nnnV { subfiglist } { too~many~identifiers } { #4 } \subfiglist_tmp_int
-    }
-  }
-
-  % Check if canvas numbers in subfiglist body
-  % are in ascending order and warn if otherwise
-  \int_zero:N \subfiglist_tmp_int
-  \seq_map_inline:Nn #2
-  {
-    \int_incr:N \subfiglist_tmp_int
-    
-    \int_compare:nF { ##1 = \subfiglist_tmp_int }
-    {
-      \msg_warning:nn { subfiglist } { wrong~canvas~order }
-      \seq_map_break:
-    }
-  }
-  
-  % Check if canvas numbers in subfiglist specification and body
-  % are in the same order and warn if otherwise
-  \int_zero:N \subfiglist_tmp_int
-  \seq_map_inline:Nn #2
-  {
-    \int_incr:N \subfiglist_tmp_int
-    
-    \int_compare:nF { ##1 = \seq_item:Nn #1 \subfiglist_tmp_int }
-    {
-      \msg_warning:nn { subfiglist } { mismatching~canvas~order }
-      \seq_map_break:
-    }
-  }
-}
-
-\cs_generate_variant:Nn \subfiglist_verify_canvas_nums:NNNn { NNNV }
-
-\tl_map_inline:nn { { label } { overlay } }
-{
-  % Check if image numbers given in subfiglist body are valid
-  \cs_new:cpn { subfiglist_verify_ #1 _nums:NNNn } ##1 ##2 ##3 ##4
-  %
-  % #1: Variable containing identifier numbers
-  % #2: Variable containing label/overlay numbers
-  % #3: Variable to store sorted label/overlay numbers
-  % #4: Total number of identifiers
-  %
-  {
-    % Sort detected label/overlay numbers
-    \seq_set_eq:NN ##3 ##2
-    \seq_sort:Nn ##3
-    {
-      \int_compare:nTF { ####1 > ####2 }
+      \int_compare:nTF { ##1 > ##2 }
         { \sort_reversed: }
         { \sort_ordered: }
     }
     
-    % Check for double label/overlay numbers
+    % Check if some image number is missing
     \int_zero:N \subfiglist_tmp_int
-    \seq_map_inline:Nn ##3
-    {
-      \int_compare:nF { \subfiglist_tmp_int < ####1 }
-      {
-          \msg_error:nnn { subfiglist } { double~ #1 } { ####1 }
-          \seq_map_break:
-      }
-      \int_set:Nn \subfiglist_tmp_int { ####1 }
-    }
-    
-    % Check for too large label/overlay numbers
-    \seq_get_right:NNT ##3 \subfiglist_tmpa_tl
-    {
-      \int_compare:nT { \subfiglist_tmpa_tl > ##4 }
-      {
-        \msg_error:nnVn { subfiglist } { too~many~ #1 s } \subfiglist_tmpa_tl { ##4 }
-      }
-    }
-    
-    % Check if label/overlay numbers in subfiglist body
-    % are in ascending order and warn if otherwise
-    \int_zero:N \subfiglist_tmp_int
-    \seq_map_inline:Nn ##2
+    \seq_map_inline:Nn \subfiglist_identifier_nums_sorted_seq
     {
       \int_incr:N \subfiglist_tmp_int
       
-      \int_compare:nF { ####1 = \seq_item:Nn ##3 { \subfiglist_tmp_int } }
+      \int_compare:nF { ##1 = \subfiglist_tmp_int }
       {
-        \msg_warning:nn { subfiglist } { wrong~ #1 ~order }
-        \seq_map_break:
-      }
-    }
-    
-    % Check if label/overlay numbers are in same order
-    % as in specification string and warn if otherwise
-    \int_zero:N \subfiglist_tmp_int
-    \seq_map_inline:Nn ##1
-    {
-      \seq_if_in:NnT ##2 { ####1 }
-      {
-        \int_incr:N \subfiglist_tmp_int
-        
-        \int_compare:nF { ####1 = \seq_item:Nn ##2 { \subfiglist_tmp_int } }
+        \int_compare:nTF { ##1 > \subfiglist_tmp_int }
         {
-          \msg_warning:nn { subfiglist } { mismatching~ #1 ~order }
+          \msg_error:nnV { subfiglist } { missing~identifier } \subfiglist_tmp_int
+          \seq_map_break:
+        }{
+          \msg_error:nnn { subfiglist } { double~identifier } { ##1 }
           \seq_map_break:
         }
       }
     }
+    
+    % Save total number of images
+    \int_set_eq:NN #2 \subfiglist_tmp_int
+    
+    % Check if image numbers in subfiglist specification
+    % are in ascending order and warn if otherwise
+    \int_zero:N \subfiglist_tmp_int
+    \seq_map_inline:Nn #1
+    {
+      \int_incr:N \subfiglist_tmp_int
+      
+      \int_compare:nF { ##1 = \subfiglist_tmp_int }
+      {
+        \msg_warning:nn { subfiglist } { wrong~identifier~order }
+        \seq_map_break:
+      }
+    }
+    
+  \subfiglist_group_int_return:N #2
+  \group_end:
+}
+
+% Check if image numbers given in subfiglist body are valid
+\cs_new:Npn \subfiglist_verify_canvas_nums:NNn #1 #2 #3
+%
+% #1: Variable containing identifier numbers
+% #2: Variable containing canvas numbers
+% #3: Total number of identifiers
+%
+{
+  \group_begin:
+    \seq_clear_new:N \subifglist_canvas_nums_sorted_seq
+    
+    % Sort detected image numbers
+    \seq_set_eq:NN \subifglist_canvas_nums_sorted_seq #2
+    \seq_sort:Nn \subifglist_canvas_nums_sorted_seq
+    {
+      \int_compare:nTF { ##1 > ##2 }
+        { \sort_reversed: }
+        { \sort_ordered: }
+    }
+    
+    % Check if some image number is missing
+    \int_zero:N \subfiglist_tmp_int
+    \seq_map_inline:Nn \subifglist_canvas_nums_sorted_seq
+    {
+      \int_incr:N \subfiglist_tmp_int
+      
+      \int_compare:nF { ##1 = \subfiglist_tmp_int }
+      {
+        \int_compare:nTF { ##1 > \subfiglist_tmp_int }
+        {
+          \msg_error:nnV { subfiglist } { missing~canvas } \subfiglist_tmp_int
+          \seq_map_break:
+        }{
+          \msg_error:nnn { subfiglist } { double~canvas } { ##1 }
+          \seq_map_break:
+        }
+      }
+    }
+    
+    % Is number of identifiers equal to number of canvases?
+    \int_compare:nF { \subfiglist_tmp_int = #3 }
+    {
+      \int_compare:nTF { \subfiglist_tmp_int > #3 }
+      {
+        \msg_error:nnVn { subfiglist } { too~many~canvases } \subfiglist_tmp_int { #3 }
+      }{
+        \msg_error:nnnV { subfiglist } { too~many~identifiers } { #3 } \subfiglist_tmp_int
+      }
+    }
+
+    % Check if canvas numbers in subfiglist body
+    % are in ascending order and warn if otherwise
+    \int_zero:N \subfiglist_tmp_int
+    \seq_map_inline:Nn #2
+    {
+      \int_incr:N \subfiglist_tmp_int
+      
+      \int_compare:nF { ##1 = \subfiglist_tmp_int }
+      {
+        \msg_warning:nn { subfiglist } { wrong~canvas~order }
+        \seq_map_break:
+      }
+    }
+    
+    % Check if canvas numbers in subfiglist specification and body
+    % are in the same order and warn if otherwise
+    \int_zero:N \subfiglist_tmp_int
+    \seq_map_inline:Nn #2
+    {
+      \int_incr:N \subfiglist_tmp_int
+      
+      \int_compare:nF { ##1 = \seq_item:Nn #1 \subfiglist_tmp_int }
+      {
+        \msg_warning:nn { subfiglist } { mismatching~canvas~order }
+        \seq_map_break:
+      }
+    }
+  \group_end:
+}
+
+\cs_generate_variant:Nn \subfiglist_verify_canvas_nums:NNn { NNV }
+
+\tl_map_inline:nn { { label } { overlay } }
+{
+  % Check if image numbers given in subfiglist body are valid
+  \cs_new:cpn { subfiglist_verify_ #1 _nums:NNn } ##1 ##2 ##3
+  %
+  % #1: Variable containing identifier numbers
+  % #2: Variable containing label/overlay numbers
+  % #3: Total number of identifiers
+  %
+  {
+    \group_begin:
+      \seq_clear_new:c { subfiglist_ #1 _nums_sorted_seq }
+      
+      % Sort detected label/overlay numbers
+      \seq_set_eq:cN { subfiglist_ #1 _nums_sorted_seq } ##2
+      \seq_sort:cn { subfiglist_ #1 _nums_sorted_seq }
+      {
+        \int_compare:nTF { ####1 > ####2 }
+          { \sort_reversed: }
+          { \sort_ordered: }
+      }
+      
+      % Check for double label/overlay numbers
+      \int_zero:N \subfiglist_tmp_int
+      \seq_map_inline:cn { subfiglist_ #1 _nums_sorted_seq }
+      {
+        \int_compare:nF { \subfiglist_tmp_int < ####1 }
+        {
+            \msg_error:nnn { subfiglist } { double~ #1 } { ####1 }
+            \seq_map_break:
+        }
+        \int_set:Nn \subfiglist_tmp_int { ####1 }
+      }
+      
+      % Check for too large label/overlay numbers
+      \seq_get_right:cNT { subfiglist_ #1 _nums_sorted_seq } \subfiglist_tmpa_tl
+      {
+        \int_compare:nT { \subfiglist_tmpa_tl > ##3 }
+        {
+          \msg_error:nnVn { subfiglist } { too~many~ #1 s } \subfiglist_tmpa_tl { ##3 }
+        }
+      }
+      
+      % Check if label/overlay numbers in subfiglist body
+      % are in ascending order and warn if otherwise
+      \int_zero:N \subfiglist_tmp_int
+      \seq_map_inline:Nn ##2
+      {
+        \int_incr:N \subfiglist_tmp_int
+        
+        \int_compare:nF { ####1 = \seq_item:cn { subfiglist_ #1 _nums_sorted_seq } { \subfiglist_tmp_int } }
+        {
+          \msg_warning:nn { subfiglist } { wrong~ #1 ~order }
+          \seq_map_break:
+        }
+      }
+      
+      % Check if label/overlay numbers are in same order
+      % as in specification string and warn if otherwise
+      \int_zero:N \subfiglist_tmp_int
+      \seq_map_inline:Nn ##1
+      {
+        \seq_if_in:NnT ##2 { ####1 }
+        {
+          \int_incr:N \subfiglist_tmp_int
+          
+          \int_compare:nF { ####1 = \seq_item:Nn ##2 { \subfiglist_tmp_int } }
+          {
+            \msg_warning:nn { subfiglist } { mismatching~ #1 ~order }
+            \seq_map_break:
+          }
+        }
+      }
+    \group_end:
   }
 
-  \cs_generate_variant:cn { subfiglist_verify_ #1 _nums:NNNn } { NNNV }
+  \cs_generate_variant:cn { subfiglist_verify_ #1 _nums:NNn } { NNV }
 }
 
 
@@ -3601,12 +3608,14 @@
   \subfiglist_seq_set_from_tl:Nn \subfiglist_spec_str_seq { #3 }
   \seq_clear:N \subfiglist_identifier_nums_seq
   \tl_clear:N \subfiglist_tokenized_spec_tl
-  \subfiglist_tokenize_spec_str:NNN \subfiglist_tokenized_spec_tl \subfiglist_identifier_nums_seq \subfiglist_spec_str_seq
+  \subfiglist_tokenize_spec_str:NNN
+    \subfiglist_tokenized_spec_tl
+    \subfiglist_identifier_nums_seq
+    \subfiglist_spec_str_seq
   
   % Verify identifier numbers
-  \subfiglist_verify_identifier_nums:NNN
+  \subfiglist_verify_identifier_nums:NN
     \subfiglist_identifier_nums_seq
-    \subfiglist_identifier_nums_sorted_seq
     \subfiglist_identifier_count_int
     
   % Parse subfiglist specification
@@ -3635,24 +3644,21 @@
     { \subfiglist_setup_overlay:nn { ##1 } { ##2 } }
 }{
   % Verify canvas numbers
-  \subfiglist_verify_canvas_nums:NNNV
+  \subfiglist_verify_canvas_nums:NNV
     \subfiglist_identifier_nums_seq
     \subfiglist_canvas_nums_seq
-    \subifglist_canvas_nums_sorted_seq
     \subfiglist_identifier_count_int
   
   % Verify label numbers
-  \subfiglist_verify_label_nums:NNNV
+  \subfiglist_verify_label_nums:NNV
     \subfiglist_identifier_nums_seq
     \subfiglist_label_nums_seq
-    \subifglist_label_nums_sorted_seq
     \subfiglist_identifier_count_int
 
   % Verify overlay numbers
-  \subfiglist_verify_overlay_nums:NNNV
+  \subfiglist_verify_overlay_nums:NNV
     \subfiglist_identifier_nums_seq
     \subfiglist_overlay_nums_seq
-    \subifglist_overlay_nums_sorted_seq
     \subfiglist_identifier_count_int
   
   % Iterate over top level elements to build
