--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -334,9 +334,9 @@
   \subfiglist_group_after_insert:nV { \dim_set:Nn #1 } #2
 }
 
-\cs_new:Npn \subfiglist_group_int_return:N #1
+\cs_new:Npn \subfiglist_group_return_int_set_eq:NN #1 #2
 {
-  \subfiglist_group_after_insert:nV { \int_set:Nn #1 } #1
+  \subfiglist_group_after_insert:nV { \int_set:Nn #1 } #2
 }
 
 \cs_new:Npn \subfiglist_group_fp_return:N #1
@@ -2249,7 +2249,7 @@
       }
     }
     
-  \subfiglist_group_int_return:N #2
+  \subfiglist_group_return_int_set_eq:NN #2 #2
   \group_end:
 }
 
