--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -547,7 +547,7 @@
     }
     
   \subfiglist_group_return_tl_set_eq:NN #1 \subfiglist_tmpa_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_seq_set_from_tl:Nn #1 #2
@@ -1731,19 +1731,23 @@
 % #3: Sequence containing specification string
 %
 {
-  \group_begin:
-    \seq_pop_left:NN #3 \subfiglist_tmpa_tl
-
-    \seq_put_right:NV #2 \subfiglist_tmpa_tl
-    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpb_tl { canvas } \subfiglist_tmpa_tl
-    \tl_put_right:NV #1 \subfiglist_tmpb_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_begin:
   
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl #3
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+    \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
+    
+    \seq_put_right:NV \subfiglist_identifier_nums_seq \subfiglist_tmpa_tl
+    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpb_tl { canvas } \subfiglist_tmpa_tl
+    \tl_put_right:NV \subfiglist_tokenized_spec_tl \subfiglist_tmpb_tl
+  
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_tokenize_at:NNN #1 #2 #3
@@ -1753,23 +1757,27 @@
 % #3: Sequence containing specification string
 %
 {
-  \group_begin:
-    \seq_pop_left:NN #3 \subfiglist_tmpa_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_begin:
+  
+    \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
     
-    \seq_pop_left:NNTF #3 \subfiglist_tmpa_tl
+    \seq_pop_left:NNTF \subfiglist_spec_str_seq \subfiglist_tmpa_tl
     {
       \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpb_tl { separator } \subfiglist_tmpa_tl
-      \tl_put_right:NV #1 \subfiglist_tmpb_tl
+      \tl_put_right:NV \subfiglist_tokenized_spec_tl \subfiglist_tmpb_tl
     }{
       \msg_error:nn { subfiglist } { missing~separator }
     }
   
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl #3
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
+  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_tokenize_newline:NNN #1 #2 #3
@@ -1779,26 +1787,30 @@
 % #3: Sequence containing specification string
 %
 {
-  \group_begin:
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_begin:
+  
     % Consume newline character
-    \seq_pop_left:NN #3 \subfiglist_tmpa_tl
+    \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
     
     \tl_clear:N \subfiglist_tmpb_tl
-    \seq_get_left:NNTF #3 \subfiglist_tmpa_tl
+    \seq_get_left:NNTF \subfiglist_spec_str_seq \subfiglist_tmpa_tl
     {
       \token_if_eq_charcode:NVTF [ \subfiglist_tmpa_tl
       {
-        \seq_pop_left:NN #3 \subfiglist_tmpa_tl
-        \seq_get_left:NN #3 \subfiglist_tmpa_tl
+        \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
+        \seq_get_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
         \bool_until_do:nn 
         {
           \bool_lazy_or_p:nn
             { \quark_if_no_value_p:N \subfiglist_tmpa_tl }
             { \token_if_eq_charcode_p:NV ] \subfiglist_tmpa_tl }
         }{
-          \seq_pop_left:NN #3 \subfiglist_tmpa_tl
+          \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
           \tl_put_right:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
-          \seq_get_left:NN #3 \subfiglist_tmpa_tl
+          \seq_get_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
         }
         
         \quark_if_no_value:NTF \subfiglist_tmpa_tl
@@ -1806,7 +1818,7 @@
           \tl_clear:N \subfiglist_tmpa_tl
           \msg_error:nn { subfiglist } { runaway~optional~argument }
         }{
-          \seq_pop_left:NN #3 \subfiglist_tmpa_tl
+          \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
         }
       }{
         \tl_put_right:NV \subfiglist_tmpb_tl \subfiglist_canvas_space_environment_default_dim
@@ -1815,14 +1827,14 @@
       \tl_put_right:NV \subfiglist_tmpb_tl \subfiglist_canvas_space_environment_default_dim
     }
     \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { newline } \subfiglist_tmpb_tl
-    \tl_put_right:NV #1 \subfiglist_tmpa_tl
+    \tl_put_right:NV \subfiglist_tokenized_spec_tl \subfiglist_tmpa_tl
   
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl #3
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
+  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_tokenize_subblock:NNN #1 #2 #3
@@ -1832,35 +1844,35 @@
 % #3: Sequence containing specification string
 %
 {
-  \group_begin:
-    \tl_clear_new:N \subfiglist_tmp_tokenized_spec_tl
-    \seq_clear_new:N \subfiglist_tmp_identifier_nums_seq
-    \seq_clear_new:N \subfiglist_tmp_spec_str_seq
-    
-    \seq_pop_left:NN #3 \subfiglist_tmpa_tl
-    \tl_set_eq:NN \subfiglist_tmp_tokenized_spec_tl #1
-    \seq_set_eq:NN \subfiglist_tmp_identifier_nums_seq #2
-    \seq_set_eq:NN \subfiglist_tmp_spec_str_seq #3
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_begin:
+  
+    \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
+    \tl_clear_new:N  \subfiglist_tokenized_spec_sub_tl% \subfiglist_tokenized_spec_tl
+    \seq_clear_new:N \subfiglist_identifier_nums_sub_seq% \subfiglist_identifier_nums_seq
+    \subfiglist_seq_set_from_tl:NN \subfiglist_spec_str_sub_seq \subfiglist_tmpa_tl
 
-    \tl_clear:N #1
-    \seq_clear:N #2
-    \subfiglist_seq_set_from_tl:NN #3 \subfiglist_tmpa_tl
-    \subfiglist_tokenize_spec_str:NNN #1 #2 #3
+    \subfiglist_tokenize_spec_str:NNN
+      \subfiglist_tokenized_spec_sub_tl
+      \subfiglist_identifier_nums_sub_seq
+      \subfiglist_spec_str_sub_seq
     
-    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { subblock } #1
-    \tl_set_eq:NN #1 \subfiglist_tmp_tokenized_spec_tl
-    \tl_put_right:NV #1 \subfiglist_tmpa_tl
+    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { subblock } \subfiglist_tokenized_spec_sub_tl
+    \tl_put_right:NV \subfiglist_tokenized_spec_tl \subfiglist_tmpa_tl
     
-    \seq_concat:NNN #2 \subfiglist_tmp_identifier_nums_seq #2
+    \seq_concat:NNN
+      \subfiglist_identifier_nums_seq
+      \subfiglist_identifier_nums_seq
+      \subfiglist_identifier_nums_sub_seq
     
-    \seq_set_eq:NN #3 \subfiglist_tmp_spec_str_seq
-
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl #3
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
+  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_tokenize_error:NNN #1 #2 #3
@@ -1870,16 +1882,20 @@
 % #3: Sequence containing specification string
 %
 {
-  \group_begin:
-    \seq_pop_left:NN #3 \subfiglist_tmpa_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_begin:
+  
+    \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
     \msg_error:nnV { subfiglist } { parser~error } \subfiglist_tmpa_tl
 
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl #3
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
+  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 % Lexer for subfiglist specification
@@ -1890,28 +1906,35 @@
 % #3: Sequence containing specification string
 %
 {
-  \group_begin:
-    
-    \bool_until_do:nn { \seq_if_empty_p:N #3 }
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_begin:
+  
+    \bool_until_do:nn { \seq_if_empty_p:N \subfiglist_spec_str_seq }
     {
-      \seq_get_left:NN #3 \subfiglist_tmpa_tl
+      \seq_get_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
       
       \tl_map_inline:nn { { integer } { at } { newline } { subblock } { error } }
       {
         \bool_if:nT { \subfiglist_use:c { subfiglist_tokenize_is_ ##1 _p:V } \subfiglist_tmpa_tl }
         {
-          \subfiglist_use:c { subfiglist_tokenize_ ##1 :NNN } #1 #2 #3
+          \subfiglist_use:c { subfiglist_tokenize_ ##1 :NNN }
+            \subfiglist_tokenized_spec_tl
+            \subfiglist_identifier_nums_seq
+            \subfiglist_spec_str_seq
+            
           \tl_map_break:
         }
       }
     }
 
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl #3
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
+  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 
