--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -1850,8 +1850,9 @@
   \subfiglist_group_begin:
   
     \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
-    \tl_clear_new:N  \subfiglist_tokenized_spec_sub_tl% \subfiglist_tokenized_spec_tl
-    \seq_clear_new:N \subfiglist_identifier_nums_sub_seq% \subfiglist_identifier_nums_seq
+    \tl_clear_new:N  \subfiglist_tokenized_spec_sub_tl
+    \seq_clear_new:N \subfiglist_identifier_nums_sub_seq
+    \seq_clear_new:N \subfiglist_spec_str_sub_seq
     \subfiglist_seq_set_from_tl:NN \subfiglist_spec_str_sub_seq \subfiglist_tmpa_tl
 
     \subfiglist_tokenize_spec_str:NNN
@@ -2002,12 +2003,15 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \group_begin:
-    \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
+  \subfiglist_group_begin:
+
+    \seq_pop_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     \subfiglist_tl_set_wrapped:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
-    \tl_put_right:NV #1 \subfiglist_tmpb_tl
+    \tl_put_right:NV \subfiglist_parsed_spec_tl \subfiglist_tmpb_tl
     
-    \seq_get_left:NN #2 \subfiglist_tmpa_tl
+    \seq_get_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     \bool_lazy_any:nF
     {
       { \quark_if_no_value_p:N \subfiglist_tmpa_tl }
@@ -2016,13 +2020,13 @@
     }{
       \tl_clear:N \subfiglist_tmpa_tl
       \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpb_tl { space } \subfiglist_tmpa_tl
-      \tl_put_right:NV #1 \subfiglist_tmpb_tl
+      \tl_put_right:NV \subfiglist_parsed_spec_tl \subfiglist_tmpb_tl
     }
     
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_tokenized_spec_seq
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_parsed_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_parse_separator:NN #1 #2
@@ -2031,15 +2035,18 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \group_begin:
-    \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
+  \subfiglist_group_begin:
+
+    \seq_pop_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     \subfiglist_tl_set_wrapped:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
-    \tl_put_right:NV #1 \subfiglist_tmpb_tl
+    \tl_put_right:NV \subfiglist_parsed_spec_tl \subfiglist_tmpb_tl
     
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_tokenized_spec_seq
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_parsed_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_parse_newline:NN #1 #2
@@ -2048,15 +2055,18 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \group_begin:
-    \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
+  \subfiglist_group_begin:
+
+    \seq_pop_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     \subfiglist_tl_set_wrapped:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
-    \tl_put_right:NV #1 \subfiglist_tmpb_tl
+    \tl_put_right:NV \subfiglist_parsed_spec_tl \subfiglist_tmpb_tl
     
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_tokenized_spec_seq
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_parsed_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_parse_subblock:NN #1 #2
@@ -2065,23 +2075,27 @@
 % #2: Sequence containing specification string
 %
 {
-  \group_begin:
-    \tl_clear_new:N \subfiglist_tmp_parsed_spec_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
+  \subfiglist_group_begin:
+
+    \seq_pop_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
+    \tl_clear_new:N  \subfiglist_parsed_spec_sub_tl
+    \tl_clear_new:N  \subfiglist_tokenized_spec_sub_tl
     
-    \seq_pop_left:NN #2 \subfiglist_tmpa_tl
     \subfiglist_tl_set_tail:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
     % Remove one level of braces
     \subfiglist_tl_set_unwrapped:NV \subfiglist_tmpa_tl \subfiglist_tmpb_tl
+    \tl_set_eq:NN \subfiglist_tokenized_spec_sub_tl \subfiglist_tmpa_tl
+        
+    \subfiglist_parse_spec_tokens:NV
+      \subfiglist_parsed_spec_sub_tl
+      \subfiglist_tokenized_spec_sub_tl
     
-    \tl_set_eq:NN \subfiglist_tmp_parsed_spec_tl #1
-    \tl_clear:N #1
-    \subfiglist_parse_spec_tokens:NV #1 \subfiglist_tmpa_tl
+    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { subblock } \subfiglist_parsed_spec_sub_tl
+    \tl_put_right:NV \subfiglist_parsed_spec_tl \subfiglist_tmpa_tl
     
-    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { subblock } #1
-    \tl_set_eq:NN #1 \subfiglist_tmp_parsed_spec_tl
-    \tl_put_right:NV #1 \subfiglist_tmpa_tl
-    
-    \seq_get_left:NN #2 \subfiglist_tmpa_tl
+    \seq_get_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     \bool_lazy_any:nF
     {
       { \quark_if_no_value_p:N \subfiglist_tmpa_tl }
@@ -2090,13 +2104,13 @@
     }{
       \tl_clear:N \subfiglist_tmpa_tl
       \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpb_tl { space } \subfiglist_tmpa_tl
-      \tl_put_right:NV #1 \subfiglist_tmpb_tl
+      \tl_put_right:NV \subfiglist_parsed_spec_tl \subfiglist_tmpb_tl
     }
     
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_tokenized_spec_seq
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_parsed_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 % Parser for lines
@@ -2106,75 +2120,66 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \group_begin:
-    \tl_clear_new:N \subfiglist_tmp_parsed_spec_tl
-    \seq_clear_new:N \subfiglist_tmp_spec_tokens_seq
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
+  \subfiglist_group_begin:
+  
+    \tl_clear_new:N  \subfiglist_parsed_spec_sub_tl
+    \seq_clear_new:N \subfiglist_tokenized_spec_sub_seq
     
-    \seq_get_left:NN #2 \subfiglist_tmpa_tl
-    \tl_clear:N \subfiglist_tmpb_tl
-    
+    \seq_get_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     \bool_until_do:nn
     {
       \bool_lazy_or_p:nn
         { \quark_if_no_value_p:N \subfiglist_tmpa_tl }
         { ! \subfiglist_parse_is_line_p:V \subfiglist_tmpa_tl }
     }{
-      \seq_pop_left:NN #2 \subfiglist_tmpa_tl
-      \subfiglist_tl_set_wrapped:NV \subfiglist_tmpa_tl \subfiglist_tmpa_tl
-      \tl_put_right:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
-      \seq_get_left:NN #2 \subfiglist_tmpa_tl
+      \seq_pop_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
+      \seq_put_right:NV \subfiglist_tokenized_spec_sub_seq \subfiglist_tmpa_tl
+      \seq_get_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     }
     
-    \tl_set_eq:NN \subfiglist_tmp_parsed_spec_tl #1
-    \seq_set_eq:NN \subfiglist_tmp_spec_tokens_seq #2
-
-    \tl_clear:N #1
-    \seq_clear:N #2
-    
-    \tl_map_inline:Nn \subfiglist_tmpb_tl
+    \bool_until_do:nn { \seq_if_empty_p:N \subfiglist_tokenized_spec_sub_seq }
     {
-      \seq_put_right:Nn #2 { ##1 }
-    }
-    
-    \bool_until_do:nn { \seq_if_empty_p:N #2 }
-    {
-      \seq_get_left:NN #2 \subfiglist_tmpa_tl
+      \seq_get_left:NN \subfiglist_tokenized_spec_sub_seq \subfiglist_tmpa_tl
       
       \tl_map_inline:nn { { canvas } { separator } { subblock } { error } }
       {
         \bool_if:nT { \subfiglist_use:c { subfiglist_parse_is_ ##1 _p:V } \subfiglist_tmpa_tl }
         {
-          \subfiglist_use:c { subfiglist_parse_ ##1 :NN } #1 #2
+          \subfiglist_use:c { subfiglist_parse_ ##1 :NN }
+            \subfiglist_parsed_spec_sub_tl
+            \subfiglist_tokenized_spec_sub_seq
           \tl_map_break:
         }
       }
     }
     
-    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { line } #1
-    \tl_set_eq:NN #1 \subfiglist_tmp_parsed_spec_tl
-    \tl_put_right:NV #1 \subfiglist_tmpa_tl
+    \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { line } \subfiglist_parsed_spec_sub_tl
+    \tl_put_right:NV \subfiglist_parsed_spec_tl \subfiglist_tmpa_tl
     
-    \seq_set_eq:NN #2 \subfiglist_tmp_spec_tokens_seq
-    
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_tokenized_spec_seq
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_parsed_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 \cs_new:Npn \subfiglist_parse_error:NN #1 #2
 {
-  \group_begin:
-    \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
+  \subfiglist_group_begin:
+
+    \seq_pop_left:NN \subfiglist_tokenized_spec_seq \subfiglist_tmpa_tl
     \tl_set:Nn \subfiglist_tmpb_tl { Parser~encountered~unexpected~token~` }
     \tl_put_right:Nf \subfiglist_tmpb_tl { \tl_head:V \subfiglist_tmpa_tl }
     \tl_put_right:Nn \subfiglist_tmpb_tl { ' }
     \msg_error:nnV { subfiglist } { internal~error } \subfiglist_tmpb_tl
     
-  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl #2
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
+  \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_tokenized_spec_seq
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_parsed_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
-  \group_end:
+  \subfiglist_group_end:
 }
 
 % Parser for subfiglist specification
@@ -2184,29 +2189,32 @@
 % #2: Token list containing tokenized specification string
 %
 {
-  \group_begin:
-    \seq_clear_new:N \subfiglist_spec_tokens_seq
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  %\subfiglist_group_local_tl_set_eq:NN \subfiglist_tokenized_spec_tl #2
+  \subfiglist_group_begin:
+
+    \seq_clear_new:N \subfiglist_tmp_spec_tokens_seq
     \tl_map_inline:nn { #2 }
     {
-      \seq_put_right:Nn \subfiglist_spec_tokens_seq { ##1 }
+      \seq_put_right:Nn \subfiglist_tmp_spec_tokens_seq { ##1 }
     }
     
-    \bool_until_do:nn { \seq_if_empty_p:N \subfiglist_spec_tokens_seq }
+    \bool_until_do:nn { \seq_if_empty_p:N \subfiglist_tmp_spec_tokens_seq }
     {
-      \seq_get_left:NN \subfiglist_spec_tokens_seq \subfiglist_tmpa_tl
+      \seq_get_left:NN \subfiglist_tmp_spec_tokens_seq \subfiglist_tmpa_tl
       
       \tl_map_inline:nn { { line } { newline } { error } }
       {
         \bool_if:nT { \subfiglist_use:c { subfiglist_parse_is_ ##1 _p:V } \subfiglist_tmpa_tl }
         {
-          \subfiglist_use:c { subfiglist_parse_ ##1 :NN } #1 \subfiglist_spec_tokens_seq
+          \subfiglist_use:c { subfiglist_parse_ ##1 :NN } \subfiglist_parsed_spec_tl \subfiglist_tmp_spec_tokens_seq
           \tl_map_break:
         }
       }
     }
     
-  \subfiglist_group_return_tl_set_eq:NN #1 #1
-  \group_end:
+  \subfiglist_group_return_tl_set_eq:NN #1 \subfiglist_parsed_spec_tl
+  \subfiglist_group_end:
 }
 
 \cs_generate_variant:Nn \subfiglist_parse_spec_tokens:Nn { NV }
